<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activity Lab</string>
    <string name="on_create">onCreate() calls:</string>
    <string name="on_start">onStart() calls:</string>
    <string name="on_resume">onResume() calls:</string>
    <string name="on_restart">onRestart() calls:</string>
    <string name="start_activity_2">Start Activity Two</string>
    <string name="close_activity">Close Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
