<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FirstActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView android:text="@string/on_create" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onCreateTextId" />

            <TextView
                android:text="@string/on_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onStartTextId" />

            <TextView
                android:text="@string/on_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onResumeTextId" />

            <TextView
                android:text="@string/on_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onRestartTextId" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onCreateCptId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onStartCptId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onResumeCptId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/onRestartCptId" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_activity_2"
        android:id="@+id/startActivity2ButtonId"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

</RelativeLayout>
